trunk/Archive/0ce3b66093e9a0a59d5179429373eea7-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
In file included from main.cpp:1:0:
/usr/include/c++/4.8/atomic: In instantiation of 'struct std::atomic<std::basic_string<char> >':
main.cpp:8:30:   required from here
/usr/include/c++/4.8/atomic:167:7: error: function 'std::atomic<_Tp>::atomic() [with _Tp = std::basic_string<char>]' defaulted on its first declaration with an exception-specification that differs from the implicit declaration 'std::atomic<std::basic_string<char> >::atomic()'
       atomic() noexcept = default;
       ^
